[package]
name = "websocket-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures-io = "0.3"
futures-core = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
futures-channel = "0.3.17"
wasm-bindgen-futures="0.4"
anyhow = "1.0"
aqueue = "1"
log = "0.4"
async-trait = "0.1"
futures-util = { version = "0.3", features = ["io"], default-features = false }

[dependencies.web-sys]
version = "0.3.22"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]

[dev-dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.13"
wasm-logger = "0.2.0"