[package]
name = "websocket-client-async"
version = "0.1.1"
edition = "2018"
authors = ["yi lu <luyikk@126.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/luyikk/websocket-client"
documentation = "https://docs.rs/websocket-client"
description = "Asynchronous websocket client."
keywords = ["websocket", "io", "web","client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[]
build_axamples_server=["tokio","tokio-tungstenite","env_logger"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures-io = "0.3"
futures-core = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
futures-channel = "0.3.17"
wasm-bindgen-futures="0.4"
anyhow = "1.0"
aqueue = "1"
log = "0.4"
async-trait = "0.1"
futures-util = { version = "0.3", features = ["io","sink", "std"], default-features = false }

cfg-if="1.0"
tokio={version="1",features=["full"],optional = true}
tokio-tungstenite = {version="0.16",optional = true}
env_logger = {version="0.9",optional = true}

[dependencies.web-sys]
version = "0.3.22"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]

[dev-dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.13"
wasm-logger = "0.2.0"

